deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weather-app
        image: anitaihuman/weather-app:latest
        ports:
        - containerPort: 5000
