service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
spec:
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 80       # Port exposed to the outside world
      targetPort: 5001 # The port on the container where the app is running
  type: LoadBalancer
